# src/api/resources/user/user.router.js
@@ -1,6 +1,11 @@
 import express from 'express';
 import userController from './user.controller';
+import passport from 'passport';
 
 export const userRouter = express.Router();
 
 userRouter.post('/signup',userController.signup);
+userRouter.post('/login',userController.login);
+//testing Purposes route
+
+userRouter.get('/me',passport.authenticate('jwt',{session:false}),userController.auth);
