# src/config/swagger.json
@@ -10,27 +10,94 @@
   "host": "localhost:8000",
   "basePath": "/api",
   "tags": [{
-    "name": "Songs",
-    "description": "API for Songs Endpoints"
-  }],
+      "name": "Songs",
+      "description": "API for Songs Endpoints"
+    },
+    {
+      "name": "Users",
+      "description": "API for Users Endpoints"
+    }
+  ],
   "schemes": ["http"],
   "consumes": ["application/json"],
   "produces": ["application/json"],
   "paths": {
+    "/users/signup": {
+      "post": {
+        "tags": ["Users"],
+        "summary": "Api Endpoint for create new User",
+        "description": "Create new User in database",
+        "parameters": [{
+          "name": "user",
+          "description": "User prams to create new song",
+          "in": "body",
+          "required": "true",
+          "schema": {
+            "$ref": "#definitions/User"
+          }
+        }],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "new User created/Added",
+            "schema": {
+              "$ref": "#definitions/SignupRes"
+            }
+          }
+        }
+      }
+    },
+    "/users/login": {
+      "post": {
+        "tags": ["Users"],
+        "summary": "Api Endpoint for Signin to user Account",
+        "description": "Signin using valid password and email",
+        "parameters": [{
+          "name": "user",
+          "description": "User prams to login",
+          "in": "body",
+          "required": "true",
+          "schema": {
+            "$ref": "#definitions/UserLogin"
+          }
+        }],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "User Login",
+            "schema": {
+              "$ref": "#definitions/loginRes"
+            }
+          }
+        }
+      }
+    },
     "/songs": {
       "post": {
         "tags": ["Songs"],
         "summary": "Api Endpoint for create Song",
         "description": "Create new Song in database",
         "parameters": [{
-          "name": "song",
-          "description": "Song prams to create new song",
-          "in": "body",
-          "required": "true",
-          "schema": {
-            "$ref": "#definitions/Song"
+            "name": "song",
+            "description": "Song prams to create new song",
+            "in": "body",
+            "required": "true",
+            "schema": {
+              "$ref": "#definitions/Song"
+            }
+          },
+          {
+            "name": "authorization",
+            "description": "Access token to authorization of user",
+            "in": "header",
+            "type": "string",
+            "required": "true"
           }
-        }],
+        ],
         "produces": [
           "application/json"
         ],
@@ -48,18 +115,25 @@
         "summary": "Api Endpoint for ALL Songs",
         "description": "Fetching all Song from database",
         "parameters": [{
-          "name": "page",
-          "type":"integer",
-          "description": "Define Page index for the record",
-          "in": "query"
-        },
-        {
-          "name": "perPage",
-          "type":"integer",
-          "description": "Define limit for the records e.g 10",
-          "in": "query"
-        }
-      ],
+            "name": "page",
+            "type": "integer",
+            "description": "Define Page index for the record",
+            "in": "query"
+          },
+          {
+            "name": "perPage",
+            "type": "integer",
+            "description": "Define limit for the records e.g 10",
+            "in": "query"
+          },
+          {
+            "name": "authorization",
+            "description": "Access token to authorization of user",
+            "in": "header",
+            "type": "string",
+            "required": "true"
+          }
+        ],
         "produces": [
           "application/json"
         ],
@@ -73,17 +147,23 @@
         }
       }
     },
-    "/songs/{id}":{
-      "parameters":[
-      {
-        "name":"id",
-        "in":"path",
-        "required":"true",
-        "description":"id of song",
-        "type":"string"
-      }
+    "/songs/{id}": {
+      "parameters": [{
+          "name": "id",
+          "in": "path",
+          "required": "true",
+          "description": "id of song",
+          "type": "string"
+        },
+        {
+          "name": "authorization",
+          "description": "Access token to authorization of user",
+          "in": "header",
+          "type": "string",
+          "required": "true"
+        }
       ],
-      "get":{
+      "get": {
         "tags": ["Songs"],
         "summary": "Api Endpoint for find single Songs",
         "description": "Fetching one Song from database",
@@ -99,7 +179,7 @@
           }
         }
       },
-      "delete":{
+      "delete": {
         "tags": ["Songs"],
         "summary": "Api Endpoint for delete single Songs",
         "description": "Fetching one Song and delteing from database",
@@ -142,6 +222,51 @@
     }
   },
   "definitions": {
+    "User": {
+      "required": ["firstName", "lastName", "email", "password"],
+      "properties": {
+        "id": {
+          "type": "string"
+        },
+        "firstName": {
+          "type": "string"
+        },
+        "lastName": {
+          "type": "string"
+        },
+        "email": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        }
+      }
+    },
+    "UserLogin": {
+      "required": ["email", "password"],
+      "properties": {
+        "email": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        }
+      }
+    },
+    "loginRes": {
+      "properties": {
+        "token": {
+          "type": "string"
+        }
+      }
+    },
+    "SignupRes": {
+      "properties": {
+        "success": {
+          "type": "boolean"
+        }
+      }
+    },
     "Song": {
       "required": ["title", "url"],
       "properties": {
@@ -160,7 +285,7 @@
         }
       }
     },
-    "UpdateSong":{
+    "UpdateSong": {
       "properties": {
         "id": {
           "type": "string"
@@ -181,8 +306,8 @@
       "properties": {
         "docs": {
           "type": "array",
-          "items":{
-          "$ref":"#definitions/Song"
+          "items": {
+            "$ref": "#definitions/Song"
           }
         },
         "total": {
@@ -194,8 +319,8 @@
         "limit": {
           "type": "integer"
         },
-        "page":{
-          "type":"integer"
+        "page": {
+          "type": "integer"
         }
       }
     }
